// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addKeywords(ajv) sets x-http-method and x-http-path keywords in ajv passed 1`] = `
[
  {
    "errors": false,
    "keyword": "x-http-method",
    "validate": [Function],
  },
]
`;

exports[`addKeywords(ajv) sets x-http-method and x-http-path keywords in ajv passed 2`] = `
[
  {
    "errors": false,
    "keyword": "x-http-path",
    "validate": [Function],
  },
]
`;
